--- a/app/src/main/res/layout/pw_bottom_sheet.xml
+++ b/app/src/main/res/layout/pw_bottom_sheet.xml
@@ -3,12 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/root"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <com.yinglan.scrolllayout.ScrollLayout
         android:id="@+id/scrollLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:background="@android:color/transparent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -17,7 +17,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:divider="@drawable/my_divider"
             android:orientation="vertical"
             android:showDividers="middle">
@@ -39,7 +39,7 @@
             <com.yinglan.scrolllayout.content.ContentRecyclerView
                 android:id="@+id/content_rv"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="wrap_content">
 
             </com.yinglan.scrolllayout.content.ContentRecyclerView>
 
