--- a/app/src/main/res/layout/fragment_unit.xml
+++ b/app/src/main/res/layout/fragment_unit.xml
@@ -292,32 +292,37 @@
 
     <include layout="@layout/layout_search" />
 
-    <!--<com.yinglan.scrolllayout.ScrollLayout-->
-        <!--android:id="@+id/scrollLayout"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent"-->
-        <!--android:background="@android:color/transparent">-->
+    <com.yinglan.scrolllayout.ScrollLayout
+        android:id="@+id/scrollLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@android:color/transparent">
 
-        <!--<LinearLayout-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="match_parent"-->
-            <!--android:orientation="vertical">-->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-            <!--<RelativeLayout-->
-                <!--android:id="@+id/bottom_drag_view"-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="50dp"-->
-                <!--android:background="@android:color/white">-->
+            <RelativeLayout
+                android:id="@+id/bottom_drag_view"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:background="@android:color/white">
 
-            <!--</RelativeLayout>-->
+                <TextView
+                    android:layout_width="50dp"
+                    android:layout_height="5dp"
+                    android:layout_centerInParent="true"
+                    android:background="@drawable/sp_rr_gray" />
+            </RelativeLayout>
 
-            <!--<com.yinglan.scrolllayout.content.ContentRecyclerView-->
-                <!--android:id="@+id/content_rv"-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="match_parent">-->
+            <com.yinglan.scrolllayout.content.ContentRecyclerView
+                android:id="@+id/content_rv"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
-            <!--</com.yinglan.scrolllayout.content.ContentRecyclerView>-->
+            </com.yinglan.scrolllayout.content.ContentRecyclerView>
 
-        <!--</LinearLayout>-->
-    <!--</com.yinglan.scrolllayout.ScrollLayout>-->
+        </LinearLayout>
+    </com.yinglan.scrolllayout.ScrollLayout>
 </RelativeLayout>
