--- a/app/src/main/res/layout/fragment_unit.xml
+++ b/app/src/main/res/layout/fragment_unit.xml
@@ -294,6 +294,7 @@
 
     <android.zhixun.uiho.com.gissystem.ui.widget.DragLayout
         android:id="@+id/dragLayout"
+        tools:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
