--- a/app/src/main/res/layout/layout_search.xml
+++ b/app/src/main/res/layout/layout_search.xml
@@ -8,13 +8,9 @@
         android:id="@+id/cv_search"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/cv_sift"
-        android:layout_alignParentTop="true"
-        android:layout_alignStart="@+id/cv_sift"
-        android:layout_marginTop="2dp"
-        android:clickable="true"
         android:layout_marginLeft="12dp"
         android:layout_marginRight="12dp"
+        android:layout_marginTop="2dp"
         android:foreground="?android:attr/selectableItemBackground"
         app:cardCornerRadius="0dp"
         app:cardElevation="@dimen/cardView_elevation"
@@ -23,8 +19,6 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="45dp"
-            android:focusable="true"
-            android:focusableInTouchMode="true"
             android:orientation="horizontal">
 
             <ImageView
@@ -50,29 +44,33 @@
                 android:singleLine="true"
                 android:textSize="14sp" />
 
-            <android.support.v7.widget.AppCompatImageView
-                android:id="@+id/aciv_clear"
-                android:layout_width="18dp"
-                android:layout_height="18dp"
-                android:layout_gravity="center_vertical"
-                android:layout_margin="4dp"
-                android:visibility="gone"
-                app:srcCompat="@drawable/ic_close_hint_24dp" />
-
             <View
                 android:layout_width="1px"
                 android:layout_height="match_parent"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
                 android:alpha="0.5"
                 android:background="@color/colorDivider" />
 
             <android.support.v7.widget.AppCompatImageView
-                android:id="@+id/aciv_search"
-                android:layout_width="45dp"
-                android:layout_height="45dp"
+                android:id="@+id/aciv_clear"
+                android:layout_width="wrap_content"
+                android:paddingLeft="5dp"
+                android:paddingRight="10dp"
+                android:layout_height="match_parent"
                 android:layout_gravity="center_vertical"
-                android:padding="10dp"
-                android:scaleType="fitXY"
-                app:srcCompat="@drawable/ic_search_black_24dp" />
+                android:visibility="gone"
+                app:srcCompat="@drawable/ic_close_hint_24dp" />
+
+            <TextView
+                android:id="@+id/tv_search"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:paddingLeft="5dp"
+                android:paddingRight="10dp"
+                android:text="搜索"
+                android:visibility="visible" />
         </LinearLayout>
     </android.support.v7.widget.CardView>
 
