--- a/app/src/main/res/layout/dialog_classify_search.xml
+++ b/app/src/main/res/layout/dialog_classify_search.xml
@@ -27,21 +27,20 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
-                android:layout_marginLeft="16dp"
+                android:layout_marginLeft="10dp"
                 android:layout_marginTop="7dp"
                 android:text="成果类型"
                 android:textSize="18sp" />
 
-            <com.zhy.view.flowlayout.TagFlowLayout
-                android:id="@+id/flow_type"
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/rv_flow_type"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="14dp"
-                android:layout_marginLeft="15dp"
-                android:layout_marginTop="14dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
                 app:max_select="1">
 
-            </com.zhy.view.flowlayout.TagFlowLayout>
+            </android.support.v7.widget.RecyclerView>
 
             <!--<android.support.v7.widget.RecyclerView-->
             <!--android:id="@+id/rv_type"-->
@@ -53,147 +52,147 @@
             <LinearLayout
                 android:id="@+id/ll_container"
                 android:layout_width="match_parent"
-                android:orientation="vertical"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
 
             </LinearLayout>
 
             <!--<RelativeLayout-->
-                <!--android:visibility="gone"-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="wrap_content">-->
+            <!--android:visibility="gone"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content">-->
 
-                <!--<TextView-->
-                    <!--android:id="@+id/tv_attrName1"-->
-                    <!--android:layout_width="wrap_content"-->
-                    <!--android:layout_height="wrap_content"-->
-                    <!--android:layout_marginBottom="7dp"-->
-                    <!--android:layout_marginLeft="16dp"-->
-                    <!--android:layout_marginTop="7dp"-->
-                    <!--android:textSize="18sp"-->
-                    <!--android:text="比例尺" />-->
+            <!--<TextView-->
+            <!--android:id="@+id/tv_attrName1"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_marginBottom="7dp"-->
+            <!--android:layout_marginLeft="16dp"-->
+            <!--android:layout_marginTop="7dp"-->
+            <!--android:textSize="18sp"-->
+            <!--android:text="比例尺" />-->
 
-                <!--<TextView-->
-                    <!--android:layout_width="wrap_content"-->
-                    <!--android:layout_height="wrap_content"-->
-                    <!--android:layout_alignParentRight="true"-->
-                    <!--android:layout_centerVertical="true"-->
-                    <!--android:layout_marginRight="10dp"-->
-                    <!--android:text="分类统计字段" />-->
+            <!--<TextView-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_alignParentRight="true"-->
+            <!--android:layout_centerVertical="true"-->
+            <!--android:layout_marginRight="10dp"-->
+            <!--android:text="分类统计字段" />-->
             <!--</RelativeLayout>-->
 
             <!--<com.zhy.view.flowlayout.TagFlowLayout-->
-                <!--android:visibility="gone"-->
-                <!--android:id="@+id/flow_1"-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:layout_marginBottom="14dp"-->
-                <!--android:layout_marginLeft="15dp"-->
-                <!--android:layout_marginTop="14dp"-->
-                <!--app:max_select="1">-->
+            <!--android:visibility="gone"-->
+            <!--android:id="@+id/flow_1"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_marginBottom="14dp"-->
+            <!--android:layout_marginLeft="15dp"-->
+            <!--android:layout_marginTop="14dp"-->
+            <!--app:max_select="1">-->
 
             <!--</com.zhy.view.flowlayout.TagFlowLayout>-->
 
             <!--<RelativeLayout-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="wrap_content">-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content">-->
 
-                <!--<TextView-->
-                    <!--android:id="@+id/tv_attrName2"-->
-                    <!--android:layout_width="wrap_content"-->
-                    <!--android:layout_height="wrap_content"-->
-                    <!--android:layout_marginBottom="7dp"-->
-                    <!--android:layout_marginLeft="16dp"-->
-                    <!--android:layout_marginTop="7dp"-->
-                    <!--android:textSize="18sp"-->
-                    <!--android:text="大地基准" />-->
+            <!--<TextView-->
+            <!--android:id="@+id/tv_attrName2"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_marginBottom="7dp"-->
+            <!--android:layout_marginLeft="16dp"-->
+            <!--android:layout_marginTop="7dp"-->
+            <!--android:textSize="18sp"-->
+            <!--android:text="大地基准" />-->
 
-                <!--<TextView-->
-                    <!--android:layout_width="wrap_content"-->
-                    <!--android:layout_height="wrap_content"-->
-                    <!--android:layout_alignParentRight="true"-->
-                    <!--android:layout_centerVertical="true"-->
-                    <!--android:layout_marginRight="10dp"-->
-                    <!--android:text="条件查询字段" />-->
+            <!--<TextView-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_alignParentRight="true"-->
+            <!--android:layout_centerVertical="true"-->
+            <!--android:layout_marginRight="10dp"-->
+            <!--android:text="条件查询字段" />-->
             <!--</RelativeLayout>-->
 
             <!--<com.zhy.view.flowlayout.TagFlowLayout-->
-                <!--android:id="@+id/flow_2"-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:layout_marginBottom="14dp"-->
-                <!--android:layout_marginLeft="15dp"-->
-                <!--android:layout_marginTop="14dp"-->
-                <!--app:max_select="1">-->
+            <!--android:id="@+id/flow_2"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_marginBottom="14dp"-->
+            <!--android:layout_marginLeft="15dp"-->
+            <!--android:layout_marginTop="14dp"-->
+            <!--app:max_select="1">-->
 
             <!--</com.zhy.view.flowlayout.TagFlowLayout>-->
 
             <!--<RelativeLayout-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="wrap_content">-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content">-->
 
-                <!--<TextView-->
-                    <!--android:id="@+id/tv_attrName3"-->
-                    <!--android:layout_width="wrap_content"-->
-                    <!--android:layout_height="wrap_content"-->
-                    <!--android:layout_marginBottom="7dp"-->
-                    <!--android:layout_marginLeft="16dp"-->
-                    <!--android:layout_marginTop="7dp"-->
-                    <!--android:textSize="18sp"-->
-                    <!--android:text="高程基准" />-->
+            <!--<TextView-->
+            <!--android:id="@+id/tv_attrName3"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_marginBottom="7dp"-->
+            <!--android:layout_marginLeft="16dp"-->
+            <!--android:layout_marginTop="7dp"-->
+            <!--android:textSize="18sp"-->
+            <!--android:text="高程基准" />-->
 
-                <!--<TextView-->
-                    <!--android:layout_width="wrap_content"-->
-                    <!--android:layout_height="wrap_content"-->
-                    <!--android:layout_alignParentRight="true"-->
-                    <!--android:layout_centerVertical="true"-->
-                    <!--android:layout_marginRight="10dp"-->
-                    <!--android:text="条件查询字段" />-->
+            <!--<TextView-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_alignParentRight="true"-->
+            <!--android:layout_centerVertical="true"-->
+            <!--android:layout_marginRight="10dp"-->
+            <!--android:text="条件查询字段" />-->
             <!--</RelativeLayout>-->
 
             <!--<com.zhy.view.flowlayout.TagFlowLayout-->
-                <!--android:id="@+id/flow_3"-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:layout_marginBottom="14dp"-->
-                <!--android:layout_marginLeft="15dp"-->
-                <!--android:layout_marginTop="14dp"-->
-                <!--app:max_select="1">-->
+            <!--android:id="@+id/flow_3"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_marginBottom="14dp"-->
+            <!--android:layout_marginLeft="15dp"-->
+            <!--android:layout_marginTop="14dp"-->
+            <!--app:max_select="1">-->
 
             <!--</com.zhy.view.flowlayout.TagFlowLayout>-->
 
             <!--<RelativeLayout-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="wrap_content">-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content">-->
 
-                <!--<TextView-->
-                    <!--android:id="@+id/tv_attrName4"-->
-                    <!--android:layout_width="wrap_content"-->
-                    <!--android:layout_height="wrap_content"-->
-                    <!--android:layout_marginBottom="7dp"-->
-                    <!--android:layout_marginLeft="16dp"-->
-                    <!--android:layout_marginTop="7dp"-->
-                    <!--android:textSize="18sp"-->
-                    <!--android:text="生成时间" />-->
+            <!--<TextView-->
+            <!--android:id="@+id/tv_attrName4"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_marginBottom="7dp"-->
+            <!--android:layout_marginLeft="16dp"-->
+            <!--android:layout_marginTop="7dp"-->
+            <!--android:textSize="18sp"-->
+            <!--android:text="生成时间" />-->
 
-                <!--<TextView-->
-                    <!--android:layout_width="wrap_content"-->
-                    <!--android:layout_height="wrap_content"-->
-                    <!--android:layout_alignParentRight="true"-->
-                    <!--android:layout_centerVertical="true"-->
-                    <!--android:layout_marginRight="10dp"-->
-                    <!--android:text="条件查询字段" />-->
+            <!--<TextView-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_alignParentRight="true"-->
+            <!--android:layout_centerVertical="true"-->
+            <!--android:layout_marginRight="10dp"-->
+            <!--android:text="条件查询字段" />-->
 
             <!--</RelativeLayout>-->
 
             <!--<com.zhy.view.flowlayout.TagFlowLayout-->
-                <!--android:id="@+id/flow_4"-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:layout_marginBottom="14dp"-->
-                <!--android:layout_marginLeft="15dp"-->
-                <!--android:layout_marginTop="14dp"-->
-                <!--app:max_select="1">-->
+            <!--android:id="@+id/flow_4"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_marginBottom="14dp"-->
+            <!--android:layout_marginLeft="15dp"-->
+            <!--android:layout_marginTop="14dp"-->
+            <!--app:max_select="1">-->
 
             <!--</com.zhy.view.flowlayout.TagFlowLayout>-->
 
