--- a/app/src/main/res/layout/fragment_dispatch.xml
+++ b/app/src/main/res/layout/fragment_dispatch.xml
@@ -17,101 +17,63 @@
 
     </android.zhixun.uiho.com.gissystem.ui.widget.BaseMapView>
 
-    <android.support.v7.widget.CardView
+    <RelativeLayout
         android:id="@+id/cv_sift"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="12dp"
+        android:layout_width="@dimen/map_option_item_size"
+        android:layout_height="@dimen/map_option_item_size"
+        android:layout_marginLeft="16dp"
         android:layout_marginTop="55dp"
+        android:background="@android:color/white"
         android:clickable="true"
-        android:foreground="?android:attr/selectableItemBackground"
-        app:cardCornerRadius="0dp"
-        app:cardElevation="@dimen/cardView_elevation"
-        app:cardUseCompatPadding="true">
-
-        <LinearLayout
-            android:id="@+id/ll_filtrate"
-            android:layout_width="45dp"
-            android:layout_height="45dp"
-            android:gravity="center"
-            android:orientation="vertical">
-
-            <android.support.v7.widget.AppCompatImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="3dp"
-                app:srcCompat="@mipmap/ic_filter" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="-5dp"
-                android:gravity="center"
-                android:text="@string/sift"
-                android:textColor="@color/primaryText"
-                android:visibility="gone" />
-        </LinearLayout>
-    </android.support.v7.widget.CardView>
-
-    <android.support.v7.widget.CardView
-        android:id="@+id/cv_layer"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_marginRight="12dp"
-        android:layout_marginTop="55dp"
-        android:clickable="true"
-        android:foreground="?android:attr/selectableItemBackground"
-        app:cardCornerRadius="0dp"
-        app:cardElevation="@dimen/cardView_elevation"
-        app:cardUseCompatPadding="true">
+        android:foreground="?android:attr/selectableItemBackground">
 
         <android.support.v7.widget.AppCompatImageView
-            android:layout_width="45dp"
-            android:layout_height="45dp"
-            android:padding="8dp"
-            app:srcCompat="@mipmap/ic_switch" />
-    </android.support.v7.widget.CardView>
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:layout_marginTop="3dp"
+            app:srcCompat="@mipmap/ic_filter" />
+    </RelativeLayout>
 
-    <android.support.v7.widget.CardView
+    <RelativeLayout
+        android:id="@+id/cv_layer"
+        android:layout_width="@dimen/map_option_item_size"
+        android:layout_height="@dimen/map_option_item_size"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="16dp"
+        android:layout_marginTop="55dp"
+        android:background="@android:color/white"
+        android:clickable="true"
+        android:foreground="?android:attr/selectableItemBackground">
+
+        <android.support.v7.widget.AppCompatImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            app:srcCompat="@mipmap/ic_switch" />
+    </RelativeLayout>
+
+    <RelativeLayout
         android:id="@+id/cv_clear"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:layout_alignParentRight="true"
         android:layout_below="@+id/cv_layer"
-        android:layout_marginRight="12dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginTop="5dp"
+        android:background="@android:color/white"
         android:clickable="true"
         android:foreground="?android:attr/selectableItemBackground"
         android:visibility="gone"
-        app:cardCornerRadius="0dp"
-        app:cardElevation="@dimen/cardView_elevation"
-        app:cardUseCompatPadding="true"
         tools:visibility="visible">
 
-        <LinearLayout
-            android:id="@+id/ll_clear"
-            android:layout_width="45dp"
-            android:layout_height="45dp"
-            android:gravity="center"
-            android:orientation="vertical">
-
-            <android.support.v7.widget.AppCompatImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="3dp"
-                app:srcCompat="@mipmap/ic_quxiao" />
-
-            <TextView
-                android:id="@+id/tv_clear"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="-5dp"
-                android:gravity="center"
-                android:text="@string/clear"
-                android:textColor="@color/primaryText"
-                android:visibility="gone" />
-        </LinearLayout>
-    </android.support.v7.widget.CardView>
+        <android.support.v7.widget.AppCompatImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:layout_marginTop="3dp"
+            app:srcCompat="@mipmap/ic_quxiao" />
+    </RelativeLayout>
 
     <android.support.v7.widget.CardView
         android:id="@+id/cv_statistics"
@@ -151,186 +113,125 @@
         </LinearLayout>
     </android.support.v7.widget.CardView>
 
-    <android.support.v7.widget.CardView
+    <RelativeLayout
         android:id="@+id/cv_space"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/map_option_item_size"
+        android:layout_height="@dimen/map_option_item_size"
         android:layout_below="@+id/cv_classifySearch"
-        android:layout_marginLeft="12dp"
-        android:layout_marginTop="-2dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="5dp"
+        android:background="@android:color/white"
         android:clickable="true"
-        android:foreground="?android:attr/selectableItemBackground"
-        app:cardCornerRadius="0dp"
-        app:cardElevation="@dimen/cardView_elevation"
-        app:cardUseCompatPadding="true">
+        android:foreground="?android:attr/selectableItemBackground">
 
-        <LinearLayout
-            android:id="@+id/ll_space"
-            android:layout_width="45dp"
-            android:layout_height="45dp"
-            android:gravity="center"
-            android:orientation="vertical">
 
-            <android.support.v7.widget.AppCompatImageView
-                android:id="@+id/aci_space"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="3dp"
-                android:src="@mipmap/ic_kongjian" />
+        <android.support.v7.widget.AppCompatImageView
+            android:id="@+id/aci_space"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:layout_marginTop="3dp"
+            android:src="@mipmap/ic_kongjian" />
+    </RelativeLayout>
 
-            <TextView
-                android:id="@+id/tv_space"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="-5dp"
-                android:gravity="center"
-                android:text="@string/space"
-                android:textColor="@color/primaryText"
-                android:visibility="gone" />
-        </LinearLayout>
-    </android.support.v7.widget.CardView>
-
-    <android.support.v7.widget.CardView
+    <RelativeLayout
         android:id="@+id/cv_classifySearch"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/map_option_item_size"
+        android:layout_height="@dimen/map_option_item_size"
         android:layout_below="@id/cv_statistics"
-        android:layout_marginLeft="12dp"
-        android:layout_marginTop="1dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="5dp"
+        android:background="@android:color/white"
         android:clickable="true"
-        android:foreground="?android:attr/selectableItemBackground"
-        app:cardCornerRadius="0dp"
-        app:cardElevation="@dimen/cardView_elevation"
-        app:cardUseCompatPadding="true">
+        android:foreground="?android:attr/selectableItemBackground">
 
-        <LinearLayout
-            android:layout_width="45dp"
-            android:layout_height="45dp"
-            android:gravity="center"
-            android:orientation="vertical">
+        <android.support.v7.widget.AppCompatImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            app:srcCompat="@mipmap/ic_directory_false" />
+    </RelativeLayout>
 
-            <android.support.v7.widget.AppCompatImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="3dp"
-                app:srcCompat="@mipmap/ic_directory_false" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="-5dp"
-                android:gravity="center"
-                android:text="@string/sift"
-                android:textColor="@color/primaryText"
-                android:visibility="gone" />
-        </LinearLayout>
-    </android.support.v7.widget.CardView>
-
-    <android.support.v7.widget.CardView
+    <RelativeLayout
         android:id="@+id/cv_cancel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/map_option_item_size"
+        android:layout_height="@dimen/map_option_item_size"
         android:layout_below="@+id/cv_classifySearch"
         android:layout_marginLeft="12dp"
         android:layout_marginTop="-2dp"
         android:clickable="true"
         android:foreground="?android:attr/selectableItemBackground"
         android:visibility="gone"
-        app:cardCornerRadius="0dp"
-        app:cardElevation="@dimen/cardView_elevation"
-        app:cardUseCompatPadding="true"
         tools:visibility="gone">
 
-        <LinearLayout
-            android:id="@+id/ll_draw"
-            android:layout_width="45dp"
-            android:layout_height="45dp"
-            android:gravity="center"
-            android:orientation="vertical">
+        <android.support.v7.widget.AppCompatImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="3dp"
+            android:src="@mipmap/ic_quxiao" />
+    </RelativeLayout>
 
-            <android.support.v7.widget.AppCompatImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="3dp"
-                android:src="@mipmap/ic_quxiao" />
-
-            <TextView
-                android:id="@+id/tv_cancel"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="-5dp"
-                android:gravity="center"
-                android:text="@string/cancel"
-                android:textColor="@color/primaryText"
-                android:visibility="gone" />
-        </LinearLayout>
-    </android.support.v7.widget.CardView>
-
-    <android.support.v7.widget.CardView
+    <RelativeLayout
         android:id="@+id/cv_my_location"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/map_option_item_size"
+        android:layout_height="@dimen/map_option_item_size"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="6dp"
-        android:layout_marginLeft="12dp"
+        android:layout_marginBottom="16dp"
+        android:layout_marginLeft="16dp"
+        android:background="@android:color/white"
         android:clickable="true"
-        android:foreground="?android:attr/selectableItemBackground"
-        app:cardCornerRadius="0dp"
-        app:cardElevation="@dimen/cardView_elevation"
-        app:cardUseCompatPadding="true">
+        android:foreground="?android:attr/selectableItemBackground">
 
         <android.support.v7.widget.AppCompatImageView
-            android:layout_width="45dp"
-            android:layout_height="45dp"
-            android:padding="8dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
             app:srcCompat="@mipmap/ic_location" />
-    </android.support.v7.widget.CardView>
+    </RelativeLayout>
 
-    <android.support.v7.widget.CardView
+
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
-        android:layout_marginBottom="6dp"
-        android:layout_marginRight="12dp"
-        android:clickable="true"
-        android:foreground="?android:attr/selectableItemBackground"
-        app:cardCornerRadius="0dp"
-        app:cardElevation="@dimen/cardView_elevation"
-        app:cardUseCompatPadding="true">
+        android:layout_marginBottom="16dp"
+        android:layout_marginRight="16dp"
+        android:background="@android:color/white"
+        android:divider="@drawable/my_divider"
+        android:orientation="vertical"
+        android:showDividers="middle">
 
-        <LinearLayout
-            android:layout_width="45dp"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:orientation="vertical">
+        <RelativeLayout
+            android:id="@+id/aiv_zoom_in"
+            android:layout_width="@dimen/map_option_item_size"
+            android:layout_height="@dimen/map_option_item_size">
 
             <android.support.v7.widget.AppCompatImageView
-                android:id="@+id/aiv_zoom_in"
-                android:layout_width="45dp"
-                android:layout_height="45dp"
-                android:padding="8dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
                 app:srcCompat="@mipmap/ic_blow_up" />
+        </RelativeLayout>
 
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1px"
-                android:background="@color/colorDivider" />
+        <RelativeLayout
+            android:layout_width="@dimen/map_option_item_size"
+            android:layout_height="@dimen/map_option_item_size">
 
             <android.support.v7.widget.AppCompatImageView
                 android:id="@+id/aiv_zoom_out"
-                android:layout_width="45dp"
-                android:layout_height="45dp"
-                android:padding="8dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
                 app:srcCompat="@mipmap/ic_shrink" />
-        </LinearLayout>
-    </android.support.v7.widget.CardView>
+        </RelativeLayout>
+
+    </LinearLayout>
 
     <include
         layout="@layout/layout_search"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        />
+        android:layout_height="wrap_content" />
 
     <android.zhixun.uiho.com.gissystem.ui.widget.DragLayout
         android:id="@+id/dragLayout"
@@ -349,14 +250,21 @@
                 android:layout_height="5dp"
                 android:layout_centerInParent="true"
                 android:background="@drawable/sp_rr_gray" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1px"
+                android:layout_alignParentBottom="true"
+                android:background="@drawable/my_divider" />
         </RelativeLayout>
 
-        <android.support.v7.widget.RecyclerView
+        <android.zhixun.uiho.com.gissystem.ui.widget.SimpleVerRv
             android:id="@+id/content_rv"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:background="@android:color/white">
 
-        </android.support.v7.widget.RecyclerView>
+        </android.zhixun.uiho.com.gissystem.ui.widget.SimpleVerRv>
 
     </android.zhixun.uiho.com.gissystem.ui.widget.DragLayout>
 </RelativeLayout>
