--- a/app/src/main/res/layout/layout_search.xml
+++ b/app/src/main/res/layout/layout_search.xml
@@ -35,10 +35,11 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:background="@null"
+                android:ellipsize="end"
                 android:gravity="center_vertical"
                 android:hint="请输入单位名称或组织机构代码"
                 android:imeOptions="actionDone"
-                android:maxLength="20"
+                android:inputType="text"
                 android:maxLines="1"
                 android:paddingLeft="8dp"
                 android:singleLine="true"
@@ -47,18 +48,18 @@
             <View
                 android:layout_width="1px"
                 android:layout_height="match_parent"
-                android:layout_marginTop="10dp"
                 android:layout_marginBottom="10dp"
+                android:layout_marginTop="10dp"
                 android:alpha="0.5"
                 android:background="@color/colorDivider" />
 
             <android.support.v7.widget.AppCompatImageView
                 android:id="@+id/aciv_clear"
                 android:layout_width="wrap_content"
-                android:paddingLeft="5dp"
-                android:paddingRight="10dp"
                 android:layout_height="match_parent"
                 android:layout_gravity="center_vertical"
+                android:paddingLeft="5dp"
+                android:paddingRight="10dp"
                 android:visibility="gone"
                 app:srcCompat="@drawable/ic_close_hint_24dp" />
 
