--- a/app/src/main/res/layout/item_dispatch_bottom.xml
+++ b/app/src/main/res/layout/item_dispatch_bottom.xml
@@ -13,8 +13,6 @@
         android:layout_marginLeft="10dp"
         android:layout_marginTop="10dp"
         android:textSize="18sp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
         tools:text="重庆市地理信息中心" />
 
     <TextView
@@ -24,31 +22,49 @@
         android:layout_marginLeft="10dp"
         android:layout_marginTop="12dp"
         android:textColor="@color/qmui_config_color_gray_1"
-        app:layout_constraintStart_toStartOf="@+id/tv_companyName"
-        app:layout_constraintTop_toBottomOf="@+id/tv_companyName"
+        android:textSize="16sp"
         tools:text="渝测成2018-0007" />
 
     <View
         android:id="@+id/line"
         android:layout_width="match_parent"
         android:layout_height="1px"
+        android:layout_marginLeft="12dp"
+        android:layout_marginRight="12dp"
         android:layout_marginTop="12dp"
-        android:background="@drawable/my_divider"
-        app:layout_constraintLeft_toLeftOf="@id/tv_companyName"
-        app:layout_constraintTop_toBottomOf="@id/tv_reportNo" />
+        android:background="@drawable/my_divider" />
 
-    <TextView
-        android:id="@+id/text_handoutContent"
+    <RelativeLayout
+        android:id="@+id/rl_handoutContent"
         android:layout_width="match_parent"
-        android:layout_height="30dp"
-        android:layout_marginBottom="12dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="12dp"
-        android:gravity="center_vertical"
-        android:text="分发内容"
-        android:textColor="@color/colorPrimary"
-        app:layout_constraintLeft_toLeftOf="@id/tv_reportNo"
-        app:layout_constraintTop_toBottomOf="@id/line" />
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/text_handoutContent"
+            android:layout_width="wrap_content"
+            android:layout_height="30dp"
+            android:layout_marginBottom="6dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="6dp"
+            android:gravity="center_vertical"
+            android:text="分发内容"
+            android:textColor="@color/colorPrimary"
+            android:textSize="16sp" />
+
+        <ImageView
+            android:id="@+id/iv_arrow"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="10dp"
+            android:src="@mipmap/arrow_down" />
+    </RelativeLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1px"
+        android:background="@drawable/my_divider" />
 
     <LinearLayout
         android:id="@+id/ll_content"
@@ -59,8 +75,7 @@
         android:divider="@drawable/my_divider"
         android:orientation="vertical"
         android:showDividers="middle"
-        app:layout_constraintLeft_toLeftOf="@id/tv_reportNo"
-        app:layout_constraintTop_toBottomOf="@id/text_handoutContent">
+        android:visibility="gone">
 
     </LinearLayout>
 
