--- a/app/src/main/res/layout/layout_search.xml
+++ b/app/src/main/res/layout/layout_search.xml
@@ -2,77 +2,67 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_marginLeft="10dp"
+    android:layout_marginRight="10dp"
+    android:layout_marginTop="10dp"
+    android:background="@drawable/shadow_rr">
 
-    <android.support.v7.widget.CardView
-        android:id="@+id/cv_search"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="12dp"
-        android:layout_marginRight="12dp"
-        android:layout_marginTop="2dp"
-        android:foreground="?android:attr/selectableItemBackground"
-        app:cardCornerRadius="0dp"
-        app:cardElevation="@dimen/cardView_elevation"
-        app:cardUseCompatPadding="true">
+        android:layout_height="40dp"
+        android:orientation="horizontal">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="45dp"
-            android:orientation="horizontal">
+        <ImageView
+            android:id="@+id/iv_user"
+            android:layout_width="40dp"
+            android:layout_height="match_parent"
+            android:background="@color/colorPrimary"
+            android:scaleType="fitXY"
+            android:src="@mipmap/username_white" />
 
-            <ImageView
-                android:id="@+id/iv_user"
-                android:layout_width="45dp"
-                android:layout_height="match_parent"
-                android:background="@color/colorPrimary"
-                android:scaleType="fitXY"
-                android:src="@mipmap/username_white" />
+        <EditText
+            android:id="@+id/et_search"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@null"
+            android:ellipsize="end"
+            android:gravity="center_vertical"
+            android:hint="请输入单位名称或组织机构代码"
+            android:imeOptions="actionDone"
+            android:inputType="text"
+            android:maxLines="1"
+            android:paddingLeft="8dp"
+            android:singleLine="true"
+            android:textSize="14sp" />
 
-            <EditText
-                android:id="@+id/et_search"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:background="@null"
-                android:ellipsize="end"
-                android:gravity="center_vertical"
-                android:hint="请输入单位名称或组织机构代码"
-                android:imeOptions="actionDone"
-                android:inputType="text"
-                android:maxLines="1"
-                android:paddingLeft="8dp"
-                android:singleLine="true"
-                android:textSize="14sp" />
+        <View
+            android:layout_width="1px"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="10dp"
+            android:layout_marginTop="10dp"
+            android:alpha="0.5"
+            android:background="@color/colorDivider" />
 
-            <View
-                android:layout_width="1px"
-                android:layout_height="match_parent"
-                android:layout_marginBottom="10dp"
-                android:layout_marginTop="10dp"
-                android:alpha="0.5"
-                android:background="@color/colorDivider" />
+        <android.support.v7.widget.AppCompatImageView
+            android:id="@+id/aciv_clear"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="center_vertical"
+            android:paddingLeft="5dp"
+            android:paddingRight="10dp"
+            android:visibility="gone"
+            app:srcCompat="@drawable/ic_close_hint_24dp" />
 
-            <android.support.v7.widget.AppCompatImageView
-                android:id="@+id/aciv_clear"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_gravity="center_vertical"
-                android:paddingLeft="5dp"
-                android:paddingRight="10dp"
-                android:visibility="gone"
-                app:srcCompat="@drawable/ic_close_hint_24dp" />
-
-            <TextView
-                android:id="@+id/tv_search"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:paddingLeft="5dp"
-                android:paddingRight="10dp"
-                android:text="搜索"
-                android:visibility="visible" />
-        </LinearLayout>
-    </android.support.v7.widget.CardView>
-
+        <TextView
+            android:id="@+id/tv_search"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:paddingLeft="5dp"
+            android:paddingRight="10dp"
+            android:text="搜索"
+            android:visibility="visible" />
+    </LinearLayout>
 </LinearLayout>
