--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,5 +16,6 @@
     <color name="CustomerActivityBackgroundColor">#F5F5F5</color>
     <color name="multiple_image_select_primary">#5FB9F5</color>
     <color name="multiple_image_select_primaryDark">#3292D3</color>
-    <color name="multiple_image_select_accent">#3292D3</color>
+    <color name="c55f3f">#c55f3f</color>
+    <color name="color_454344">#454344</color>
 </resources>
